fixed earthhacks logo alignment on small screens

--- a/src/scss/components/landing/background/backdrop/footer/_footer.scss
+++ b/src/scss/components/landing/background/backdrop/footer/_footer.scss
@@ -21,11 +21,13 @@
     margin-top: -48em;
   }
   @include respond(phone-narrow) {
-    margin-top: -44.5em;
+    margin-top: -52.5em;
   }
-
   @include respond(smallest) {
-    margin-top: -27.5em;
+    margin-top: -37.5em;
+  }
+  @media screen and (max-width: 394px) {
+    margin-top: -27em;
   }
 }
 
